--- a/package.json
+++ b/package.json
@@ -3,26 +3,28 @@
   "description": "Echo for every script. For safety.",
   "version": "0.0.0-alpha",
   "license": "MIT",
-  "main": "index.js",
+  "workspaces": [
+    "packages/*"
+  ],
+  "packageManager": "yarn@3.6.3",
   "repository": "https://github.com/taeyoon0137/echoscript.git",
   "author": "Taeyoon Lee <taeyoon0137@gmail.com>",
-  "packageManager": "yarn@3.6.3",
   "scripts": {
     "vscode": "yarn dlx @yarnpkg/sdks vscode",
     "sync:version": "./scripts/version.sh",
-    "readme": "yarn readme:create && yarn readme:symbol && yarn readme:version && yarn readme:packages",
+    "readme": "yarn readme:create && yarn readme:hero && yarn readme:symbol && yarn readme:version && yarn readme:packages && yarn readme:format",
     "readme:create": "./scripts/readme_create.sh",
     "readme:packages": "./scripts/readme_packages.sh",
+    "readme:hero": "./scripts/readme_hero.sh",
     "readme:symbol": "./scripts/readme_symbol.sh",
-    "readme:version": "./scripts/readme_version.sh"
+    "readme:version": "./scripts/readme_version.sh",
+    "readme:format": "prettier --write \"./README.md\" --log-level silent"
   },
   "devDependencies": {
     "@lerna-lite/cli": "2.5.1",
     "@types/node": "^20.6.0",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "zod": "^3.22.2"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
