update: add each package and config

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,12 +3,12 @@
  *
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
- */
-{
+ */{
   "recommendations": [
     "streetsidesoftware.code-spell-checker",
     "chrisbibby.hide-node-modules",
     "pkief.material-icon-theme",
-    "arcanis.vscode-zipfs"
+    "arcanis.vscode-zipfs",
+    "esbenp.prettier-vscode"
   ]
 }
