--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "readme:hero": "./scripts/readme_hero.sh",
     "readme:symbol": "./scripts/readme_symbol.sh",
     "readme:version": "./scripts/readme_version.sh",
-    "readme:format": "prettier --write \"./README.md\" --log-level silent"
+    "readme:format": "prettier --write \"./README.md\" --log-level silent",
+    "version": "yarn sync:version && yarn readme"
   },
   "devDependencies": {
     "@lerna-lite/cli": "2.5.1",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^20.6.0",
     "prettier": "^3.0.3",
+    "tsc-alias": "^1.8.7",
     "typescript": "^5.2.2",
     "zod": "^3.22.2"
   }
