--- a/packages/yarn/package.json
+++ b/packages/yarn/package.json
@@ -2,8 +2,19 @@
   "name": "@echoscript/yarn-plugin",
   "description": "Run echoscript via yarn plugin.",
   "version": "0.0.0-alpha",
+  "scripts": {
+    "build": "yarn build:clear && yarn build:types",
+    "build:clear": "touch ./dist/temp && rm -rf ./dist/*",
+    "build:types": "tsc -b && tsc-alias"
+  },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.5.1",
     "@yarnpkg/core": "^4.0.0-rc.50",
+    "tsc-alias": "^1.8.7",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@echoscript/core": "workspace:^",
+    "@echoscript/types": "workspace:^"
   }
 }
