config: Update publish config

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,10 @@
 nodeLinker: pnp
 
+npmScopes:
+  echoscript:
+    npmAlwaysAuth: true
+    npmAuthToken: '${ECHOSCRIPT_NPM_TOKEN}'
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
