--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@echoscript/types",
   "description": "Type definition for Echoscript.",
-  "version": "0.0.0-alpha",
+  "version": "0.0.1-alpha.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
