--- a/packages/yarn/package.json
+++ b/packages/yarn/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@echoscript/yarn-plugin",
   "description": "Run echoscript via yarn plugin.",
-  "version": "0.0.0-alpha",
+  "version": "0.0.1-alpha.0",
   "scripts": {
     "build": "yarn build:clear && yarn build:types",
     "build:clear": "touch ./dist/temp && rm -rf ./dist/*",
