--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,5 +13,6 @@
     "@total-typescript/ts-reset": "^0.5.1",
     "tsc-alias": "^1.8.7",
     "typescript": "^5.2.2"
-  }
+  },
+  "gitHead": "85c7e3570c27949936d194736a1188bafd09a4c9"
 }
