--- a/packages/yarn/package.json
+++ b/packages/yarn/package.json
@@ -14,7 +14,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@echoscript/core": "workspace:^",
-    "@echoscript/types": "workspace:^"
-  }
+    "@echoscript/core": "^0.0.1-alpha.2.0",
+    "@echoscript/types": "^0.0.1-alpha.2.0"
+  },
+  "gitHead": "85c7e3570c27949936d194736a1188bafd09a4c9"
 }
