config: Update publish config to public

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.1-alpha.2.1",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "yarn build:clear && yarn build:types",
     "build:clear": "touch ./dist/temp && rm -rf ./dist/*",
@@ -18,5 +21,5 @@
   "peerDependencies": {
     "zod": "*"
   },
-  "gitHead": "85c7e3570c27949936d194736a1188bafd09a4c9"
+  "gitHead": "666f5bb6b39213db9fb8c6dd2f3f28413e7cce78"
 }
