--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,9 @@
   "name": "@echoscript/core",
   "description": "Core logic of Echoscript.",
   "version": "0.0.1-alpha.2.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -14,5 +17,5 @@
     "tsc-alias": "^1.8.7",
     "typescript": "^5.2.2"
   },
-  "gitHead": "85c7e3570c27949936d194736a1188bafd09a4c9"
+  "gitHead": "666f5bb6b39213db9fb8c6dd2f3f28413e7cce78"
 }
