config: bundle plugin with rollup

--- a/packages/yarn/tsconfig.json
+++ b/packages/yarn/tsconfig.json
@@ -7,7 +7,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "ESNext",
     "rootDir": "./src",
     "baseUrl": "./src",
     "outDir": "./dist",
