--- a/packages/yarn/package.json
+++ b/packages/yarn/package.json
@@ -6,14 +6,22 @@
     "access": "public"
   },
   "scripts": {
+    "bundle": "rollup --config ./rollup.config.js --bundleConfigAsCjs ./src/main.ts --file ./plugin/bundle.js --format cjs",
     "build": "yarn build:clear && yarn build:types",
     "build:clear": "touch ./dist/temp && rm -rf ./dist/*",
     "build:types": "tsc -b && tsc-alias"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@total-typescript/ts-reset": "^0.5.1",
     "@yarnpkg/core": "^4.0.0-rc.50",
+    "rollup": "^3.29.2",
+    "rollup-plugin-minify": "^1.0.3",
+    "rollup-plugin-terser": "^7.0.2",
     "tsc-alias": "^1.8.7",
+    "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
