fix: Style console

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,5 +8,7 @@ npmScopes:
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
+  - path: packages/yarn/plugin/bundle.js
+    spec: 'yarn-plugin-echoscript'
 
 yarnPath: .yarn/releases/yarn-3.6.3.cjs
