--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,5 +17,8 @@
     "tsc-alias": "^1.8.7",
     "typescript": "^5.2.2"
   },
-  "gitHead": "666f5bb6b39213db9fb8c6dd2f3f28413e7cce78"
+  "gitHead": "666f5bb6b39213db9fb8c6dd2f3f28413e7cce78",
+  "dependencies": {
+    "chalk": "^5.3.0"
+  }
 }
