--- a/packages/types/scripts/tsconfig.json
+++ b/packages/types/scripts/tsconfig.json
@@ -5,14 +5,8 @@
  * LICENSE file in the root directory of this source tree.
  */
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./src",
-    "baseUrl": "./src",
-    "outDir": "./dist",
-    "paths": {
-      "@*": ["./*"]
-    }
-  },
-  "exclude": ["dist", "scripts"]
+    "rootDir": "../"
+  }
 }
