--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "scripts": {
     "vscode": "yarn dlx @yarnpkg/sdks vscode",
     "sync:version": "./scripts/version.sh",
-    "readme": "yarn readme:create && yarn readme:hero && yarn readme:symbol && yarn readme:version && yarn readme:packages && yarn readme:format",
+    "readme": "yarn readme:create && yarn readme:image && yarn readme:symbol && yarn readme:version && yarn readme:packages && yarn readme:format",
     "readme:create": "./scripts/readme_create.sh",
     "readme:packages": "./scripts/readme_packages.sh",
-    "readme:hero": "./scripts/readme_hero.sh",
+    "readme:image": "./scripts/readme_image.sh",
     "readme:symbol": "./scripts/readme_symbol.sh",
     "readme:version": "./scripts/readme_version.sh",
     "readme:format": "prettier --write \"./README.md\" --log-level silent",
