--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@echoscript/core",
   "description": "Core logic of Echoscript.",
-  "version": "0.0.1-alpha.2.2",
+  "version": "0.1.0",
   "publishConfig": {
     "access": "public"
   },
