--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@echoscript/yarn-plugin",
   "description": "Run echoscript via yarn plugin.",
-  "version": "0.0.1-alpha.2.3",
+  "version": "0.1.0",
   "publishConfig": {
     "access": "public"
   },
@@ -25,8 +25,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@echoscript/core": "^0.0.1-alpha.2.2",
-    "@echoscript/types": "^0.0.1-alpha.2.2"
+    "@echoscript/core": "^0.1.0",
+    "@echoscript/types": "^0.1.0"
   },
   "gitHead": "666f5bb6b39213db9fb8c6dd2f3f28413e7cce78"
 }
