--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,6 +8,8 @@ npmScopes:
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: '@yarnpkg/plugin-interactive-tools'
   - path: packages/plugin/plugin/bundle.js
     spec: 'yarn-plugin-echoscript'
 
