--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -6,7 +6,7 @@
     "access": "public"
   },
   "scripts": {
-    "bundle": "rollup --config ./rollup.config.js --bundleConfigAsCjs ./src/main.ts --file ./plugin/bundle.js --format cjs",
+    "bundle": "rollup --silent --config ./rollup.config.js --bundleConfigAsCjs ./src/main.ts --file ./plugin/bundle.js --format cjs",
     "build": "yarn build:clear && yarn build:types",
     "build:clear": "touch ./dist/temp && rm -rf ./dist/*",
     "build:types": "tsc -b && tsc-alias"
@@ -16,7 +16,7 @@
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.3",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@yarnpkg/core": "^4.0.0-rc.50",
+    "@yarnpkg/core": "^4.0.0-rc.51",
     "rollup": "^3.29.2",
     "rollup-plugin-minify": "^1.0.3",
     "rollup-plugin-terser": "^7.0.2",
