--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "echoscript",
   "description": "Echo for every script. For safety.",
-  "version": "0.0.1-alpha.2.1",
+  "version": "0.1.2",
   "license": "MIT",
   "workspaces": [
     "packages/*"
