docs: Update License field

--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -2,6 +2,7 @@
   "name": "@echoscript/yarn-plugin",
   "description": "Run echoscript via yarn plugin.",
   "version": "0.1.4",
+  "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
