--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,7 @@
   "name": "@echoscript/core",
   "description": "Core logic of Echoscript.",
   "version": "0.1.4",
+  "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
