--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "version": "yarn sync:version && yarn readme"
   },
   "devDependencies": {
-    "@lerna-lite/cli": "2.5.1",
-    "@lerna-lite/publish": "^2.5.1",
+    "@lerna-lite/cli": "3.2.0",
+    "@lerna-lite/publish": "^3.2.0",
+    "@lerna-lite/version": "^3.2.0",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "^20.6.2",
-    "prettier": "^3.0.3",
-    "tsc-alias": "^1.8.7",
+    "@types/node": "^20.10.7",
+    "prettier": "^3.1.1",
+    "tsc-alias": "^1.8.8",
     "typescript": "^5.2.2",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   }
 }
