--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -13,15 +13,15 @@
     "build:types": "tsc -b && tsc-alias"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-typescript": "^11.1.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@yarnpkg/core": "^4.0.0-rc.51",
-    "rollup": "^3.29.2",
+    "@yarnpkg/core": "^4.0.2",
+    "rollup": "^3.29.4",
     "rollup-plugin-minify": "^1.0.3",
     "rollup-plugin-terser": "^7.0.2",
-    "tsc-alias": "^1.8.7",
+    "tsc-alias": "^1.8.8",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
