--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,5 @@
   // Yarn pnp typescript path definition
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "prettier.prettierPath": ".yarn/sdks/prettier/index.js"
+  "prettier.prettierPath": ".yarn/sdks/prettier/index.cjs"
 }
