--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -17,15 +17,15 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "^20.10.7",
+    "@types/node": "^20.12.2",
     "@types/prettier": "^3.0.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2",
+    "typescript": "5.2.*",
     "zod": "^3.22.4",
-    "zod-to-json-schema": "^3.22.3"
+    "zod-to-json-schema": "^3.22.5"
   },
   "peerDependencies": {
     "zod": "*"
